<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/circle_bg_CONTENT_DESCP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/first_screen_bg"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/let_s_get_started"
        android:textColor="@color/darkMainColor"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/getStartedDescp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/getStartedMessage"
        android:textColor="@color/greyText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <Button
        android:id="@+id/continueEmailBTN"
        style="@style/CustomButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/filled_round_btn"
        android:drawableStart="@drawable/email_icon"
        android:elevation="0dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/continue_with_email_address"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/border_round_btn"
        android:drawableStart="@drawable/google_icon"
        android:elevation="0dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:minWidth="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/darkMainColor"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/border_round_btn"
        android:drawableStart="@drawable/facebook_icon"
        android:elevation="0dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/darkMainColor"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/border_round_btn"
        android:drawableStart="@drawable/twitter_icon"
        android:elevation="0dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:shadowColor="@color/white"
        android:text="@string/continue_with_twitter"
        android:textAllCaps="false"
        android:textColor="@color/darkMainColor"
        app:layout_constraintBottom_toTopOf="@+id/signUpMessage"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />


    <TextView
        android:id="@+id/signUpMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/terms_and_condition_message"
        android:textColor="@color/greyText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />


</androidx.constraintlayout.widget.ConstraintLayout>